--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,46 @@
 body {
 	background-color: white;
+	padding: 0;
+	margin: 0;
+	font-size: 1rem;
 }
 
+h1 {
+	font-size: 3em;
+	color: white;
+	margin: 0;
+	text-align: center;
+}
+
+.page-wrapper {
+	width: 100%;
+}
 .header {
+	position: absolute;
+}
+.hero {
+	min-height: 100vh;
+	background-color: #43317f;
+	display: flex;
+	position: relative;
+	align-items: center;
+	justify-content: center;
+
+
 	
+}
+.section {
+	padding: 3em 3%;
+	margin: 0;
+}
+.about {
+	height: 100vh;
+}
+.services {
+	height: 100vh;
+	background-color: #b7ebeb;
+}
+.container {
+	max-width: 80em;
+	margin: 0 auto;
 }
