--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,28 @@ h2 {
   margin-right: auto;
   margin-left: auto;
 }
+
+.content {
+  width: 100%;
+  margin-top: 4em;
+  text-align: center;
+}
+
+.rotate {
+  object-fit: contain;
+  will-change: transform;
+  animation: rotation 10s linear infinite;
+}
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
+
+.rotate:hover {
+	animation-play-state: paused;
+}
+
